# duckero-backend

./: .env  .gitignore  .travis.yml  Makefile  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  auth.py  database.py  models.py  schema.sql  utils.py
app/extensions/: mail.py
tests/: conftest.py  test_auth.py  test_mail.py
tests/models/: test_user.py
