[tool.poetry]
name = "rb-landing-back"
version = "0.1.0"
description = ""
authors = ["Leonardo Daher <leonardo.daher@usp.br>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
Flask-Cors = "^3.0.8"
Flask-Mail = "^0.9.1"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
Faker = "^3.0.0"
pytest = "^5.3.2"
freezegun = "^0.3.12"
black = "^19.10b0"
isort = "^4.3.21"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
force_grid_wrap = "0"
use_parentheses = "True"
line_length = "88"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
